[package]
name = "apach-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
tiny_http = "0.12.0"
rand = "0.8.5"
data-encoding = "2.4.0"
ring = "0.16.20"
